--- a/组件化开发/第三章.md
+++ b/组件化开发/第三章.md
@@ -52,7 +52,7 @@ css： 类名 、相似样式可以使用继承的思想
 js：通用的业务使用common.js 、 辅助的工具方法until.js等
 
 ### 自适应方案设计
-例如图标：30*30，设备大了之后是35*35
+例如图标：30乘30，设备大了之后是35乘35
 不是在开发时人工手动去写，而是放在上线后的代码中自动去变。自动变的工作是放在构建工具中去做
 
 ### 代码维护及复用性设计的思考
