--- a/组件化开发/第四章.md
+++ b/组件化开发/第四章.md
@@ -1,12 +1,12 @@
 ###Welcome to use MarkDown
 
 ## 项目设计与原理分析
-* css模块化设计
-* JS组件设计
-* 自适应
-* SPA设计
-* 构建设计
-* 上线指导
+### css模块化设计
+### JS组件设计
+### 自适应
+### SPA设计
+### 构建设计
+### 上线指导
 
 ### css模块化设计 设计原则
 * a、可复用能继承要完整
@@ -24,5 +24,9 @@
 抽象是说：将一些看着长的不一样的东西抽象成一个统一的模块。这个模块通过隐藏、变量配置来达到具体的内容。
 例如：面板：标题+容器，有的可以看做是没有标题的。可以抽象出一个列表的东西，列表可以通过一个配置项来控制他是横向的还是纵向的。列表中填充的内容又具体到了不同的东西。列表是通用的，横向列表填充内容之后就是第一个面板和第四个面板
 
-华东区-合肥校区-安卓应用与开发专业-1612班每日新闻项目-170710 
+> 预渲染优化：
 http://codingfishman.github.io/2016/05/06/prerender%E9%A2%84%E6%B8%B2%E6%9F%93%E4%BC%98%E5%8C%96SEO/
+
+### 构建设计
+
+![构建工具](4-5构建工具.png)
