面试第二章

--- a/面试准备/面试准备.md
+++ b/面试准备/面试准备.md
@@ -1,21 +1,104 @@
 ###Welcome to use MarkDown
 
-## 2-5 业务分析或实战模拟
+## 2-1 面试及环节设置
+
+* 社招：（2-3年的人）
+知识 ：协议 对业务的认知和把控程度
+能力：架构、对业务的把控能力、对组件的抽象能力。更看重把控能力，能不能带领2-3人快速提高开发效率以及产品的稳定性
+经验：有这个能力，那就是经验了。
+
+* 面试环节的设置：
+一面：基础知识（HTML css js）
+二面/三面：高级工程师/资深工程师 问基础之上的延伸，问你原理。没有标准，看你怎么引导他。根据你的经历 你擅长的。例如：我用vue做了什么什么。先问项目再会落脚到vue上，vue的生命周期是什么，工作原理是什么，有没有看过他的源码，他的源码有什么缺点，让你改进你怎么改进，他的框架有什么优点，等等
+三面/四面：技术负责人/业务负责人 不再关注技术点了而是关注你在职业生涯的从业方面，有没有做过什么特色的业务。在某个业务上做过哪些事情，你的角色是什么，你推动了什么，你改变了什么。他更想听这方面的故事。他要知道你的历史来判断你在这个岗位上你能做出什么成绩来。
+hr终面：看中沟通 潜力 性格。技术生涯的潜力和业务上的潜力
+
+## 2-2 2-3 职位分析（JD）
+初衷：当前岗位是不是你所喜欢的，当前岗位你是不是能hold住，在短期内准备能不能hold住。
+职位分析（JD）分析
+* 职位描述：（工作职责）
+1、pc端 移动端双方面的知识
+2、App H5开发：hybird开发 纯H5开发就是跟native客户端没有交互的(有动画的活动页专题页)
+3、调试数据接口 模拟数据 与UI 产品 后台的沟通
+4、负责京东金融前端组件库的建立 （难度设立：1、基本功扎实原生js css理解是否到位2、之前有没有前端组件库设立的经验3、是否通读过其他的UI组件库）本条大于前3条，前3条是基础工作1 2年都可以胜任
+5、对现有系统的优化与重构（考察你的方案）
+* 任职要求：（技术深度 技术能力 工作能力）
+1、HTML5最新规范 要求对新知识的关注
+2、js面向对象 原型链等
+3、web最新标准 数据与表现分离 HTML语义化 vue实际经验，要准备在开发过程中遇到的问题
+4、前端架构分析与设计能力：可以拿之前做过的项目 目录结构怎么设计 复用性怎么设计 模块化怎么设计 自动化测试怎么测 上下流是什么
+5、用户可用性、用户体验、用户研究等：例如是按钮，不光是完成任务，还要测试留不流畅 卡不卡等。这么说：我这么做是完成了功能，我又做了哪些改进，增强了用户体验
+6、对前端有强烈兴趣：浏览github上排名靠前的前端项目都在用什么新技术，看技术博客。当问你的时候，你要能说出1 2 3来
+7、css预编译
+8、能够自己搭建前端构建环境gulp。grunt和gulp的区别，为什么用gulp而不用grunt。
+9、某某优先的不是必备项，如果准备的充分可以说
+
+
+## 2-4 2-5 业务分析或实战模拟
 1、js的异步加载方式有？
 2、模块加载机制，传统的模块处理方式有几种？requireJS是一种，在现有的框架中是怎么处理模块化的，es6中是怎么处理模块化的？了解requireJS和Sea.js的区别？
 3、使用了CDN加速。静态域：专门放静态资源的CDN域
 4、和技术栈配套的是最常用的：jq中操作大片DOM片段几乎是借用模板的。模板比较好的：Hanldebars(基于Mustache构建而成)、Underscore Templates 、 Embedded JS（EJS）
+5、查看页面的布局，自己动手尝试。
+6、打开调试面板 element查看meta标签  sources中查看用到的技术栈
+`
+<meta name="format-detection" content="telephone=no,email=no"> 是关闭页面中数字自动识别为电话 邮箱
+<link href="//yfd1.fbcontent.cn" rel="dns-prefetch"> dns预解析 提升性能
+<meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome = 1"> 网页兼容
+<meta name="renderer" content="webkit"> 双核浏览器下 优先使用webkit内核
+<meta name="force-rendering" content="webkit"> 第一次浏览时，浏览器就忽略内置名单及用户选择，强制用WebKit内核。
+<meta name="mobile-agent" content="format=html5; url=https://m.yuanfudao.com/?keyfrom=apeOfficialWebsite&amp;vendor=apeOfficialWebsite">  pc端是www.yuanfudao.com 移动端是m.yuanfudao.com
+url=/m：代表当前PC页所对应的手机页/m，两者必须是一一对应关系（而不是统一对应至手机站首页）前提是你需要做两套网站，一套是在pc端访问的（假如网址是www.baidu.com），一套是在手机端访问的（假如网址是m.baidu.com），这句就是判断如果你是在手机上打开的这个网站那就会打开m.baidu.com这个网址，但是默认打开的是www.baidu.com
+`
 
 ## 2-6 技术栈准备
-jq的源码：核心架构、事件委托是怎么实现的 插件机制。兼容性可以去看。看jq的博客，过一遍
-vue react angualr精通一个，了解1 2个，不要说3个都行。
-node如果没做过，不要求就不要说了。
-前端工程：sass less gulp grunt npm webpack
-gulp和grunt的区别，没用的话就直接使用gulp。
-npm 常用命令 npmscripts
+* jq的源码：核心架构、事件委托是怎么实现的 插件机制。兼容性可以去看。看jq的博客，过一遍
+* vue react angualr精通一个，了解1 2个，不要说3个都行。
+* node如果没做过，不要求就不要说了。
+* 前端工程：sass less gulp grunt npm webpack browserify 
+* gulp和grunt的区别，没用的话就直接使用gulp。
+* npm 常用命令和 npmscripts
+* rollup 打包：比较小众 适合打包npm
 
-## 2-7
-自我介绍
+## 2-7 面试准备-自我陈述
+自我介绍：
+简历
+1.基本信息，姓名-年龄-手机-邮箱-籍贯
+2.学历
+3.工作经历，时间-公司-岗位-职责-技术栈-业绩
+4.开源项目，github和说明
+> 当在工作岗位上没有做出什么业绩：技巧是重新梳理当时什么地方没做好，再想出一套技术方案来，最好是用代码去实现一遍。将最新研究出的方案写在简历中，作为在工作职责上所做出的产出，也就是攻克的技术难点。
+> 面试官真正关心的是哪个技术方案解决了哪个技术问题
+> 开源项目捷径：在github上找流行的开源项目，去参与这些项目，但是不能作假
+
+自我陈述
+1. 把握面试的沟通方向
+#### 要善于掌握，你应该说什么不该说什么，因为面试官在你回答完后已经准备好了问题问你
+* 帮我的实验室导师做过什么什么项目
+> 作为面试官听的点是：你做过什么项目，这个项目是做什么的，和我们前端的结合点是什么，他的角色是什么，他在这个项目中承担的责任是什么，他做出了哪些成绩？
+* 我在实验室里我是负责人
+> 这句话吸引人的点是负责人。1、你的项目有几个人参与 2、你这个负责人起了一个什么样的角色，是项目管理还是技术管理 3、你做出了什么样的成绩
+> 项目大的话会问很多问题，问到各种细节，你的项目是怎么分配的，团队间是怎么协作的，技术管理上是怎么解决技术配合的，技术难点是怎么解决的额
+> 可以这么说：我平时喜欢研究网站，看他们的技术原理，和好玩的点，我愿意思考，也愿意尝试有没有更好的方式。这时候停一下，不要再往下说了。这时候面试官会问你，你会去看什么，这是一个正向的沟通。多准备几个点。
+2. 豁达、自信的适度发挥
+豁达：说话不要唯唯诺诺。
+自信：不要担心他问你的你不会，这样气场就下来了。
+不要膨胀，让他欣赏你就行。
+
+## 2-8 自我陈述
+#### 实例：
+* 自如谈兴趣 巧妙示实例 适时讨疑问
+* 节奏要适宜、切忌小聪明
+> 适时讨疑问：回答了1 2问，第三问往往会比较难，这时要说我不懂我要回去思考一下。面试官能不能指点一下，我在这方面确实没有经验，或给什么什么建议，有什么参考资料，我回去弄懂它。
+> 节奏要适宜、切忌小聪明：回答问题要坦诚，不要觉得这么简单的问题还问我，节奏要放平缓。例如实现页面布局，写出1-2种只能叫实现。但是写出4-5种是对技术的追求
+#### 实战：
+* 方向要对、过程要细
+* 胆子要大、心态要和
+> 方向要对：例如要求做优化，即使是你没有做过优化。但是你可以提供优化方案。如果能说的越细越好。
+> 胆子要大：例如公司出了一个很难的算法题，不要还没看就放弃。这对所有人都难，但是你表现出了思维独特，视角独特，那你也就成功了。
+> 心态要和：都答对了也要不要飘飘然，当遇到问到的问题都不会了的话，也不要气馁。这样会导致面试提前终止。这时要想办法在这次面试中得到点什么，不要轻易放弃，多向面试官问些问题。是类似于请教一样，我该看什么资料去补这块的知识点。问面试官，我补完了还能再来面试吗？
+> 面试失败了，自己回去把知识体系补全了，再回来，公司依然会接收你。
+> 这些比知识本身更重要，这是决定结果的时候。好好体会这个方法和技巧。
 
 ## 3-1
 一面：
