页面布局css盒模型

--- a/组件化开发/第三章.md
+++ b/组件化开发/第三章.md
@@ -30,7 +30,7 @@
   webpack：打包 编译
   fis：百度内部集成的构建方案
   prepack：facebook推出的代码优化的方案。有局限性：例子：a+b=c；获取当时编译时的ab的值，算出结果成为c。导致了他是即时 运行编译工具、且没有BOM DOM。可以关注后期的动态
-  rollup：和webpack的功能非常相似。webpack2.0之前都用rollup,因为他有个treeshingce的功能，可以把冗余代码去掉，而且编译速度比较快
+  rollup：和webpack的功能非常相似。webpack2.0之前都用rollup,因为他有个Tree-shaking 的功能，可以把冗余代码去掉，而且编译速度比较快
 * 2、为什么要构建工具
      资源压缩：不光js，css和图片。否则体积太大
      静态资源替换：字体文件图片，能不能换掉，避免http请求 
@@ -38,22 +38,24 @@
      编译处理：用了es6就需要babel编译，以及sourcemap等
 * 3、我们用哪个构建工具
 webpack做编译 、npm scripts做任务管理
-npm scripts相对轻松，对比是gulp灵活还是npm scripts灵活
+npm scripts相对轻松，可以对比是gulp灵活 还是npm scripts灵活
+使用最简单的webpack去做构建
 
 ### MVVM框架选择
 最新版本本质上已经没有什么区别：双向绑定 单向绑定 ssr 组件化都能做
 1、后端转前端多 angular 新手多选vue
 2、生态：插件体系、文档以及开源作者对框架维护的热度。
 3、对它原理的了解程度。当项目的复杂度上升，我们能不能在原理上吃透他，应该怎么去用它，让他的性能达到最佳。
-使用ReactNative做项目，跑在端上的时候，性能hold不住，是框架本身的问题，还是你不会用的问题。
+使用ReactNative做项目，跑在端上的时候，结果性能你hold不住，你hold不住是因为是框架本身的问题，还是你不会用的问题？
 
 ### 模块化设计
-css： 类名 、相似样式可以使用继承的思想
+css： 类名 、相似样式可以使用继承的思想。都用btn的样式，怎么出来不同的效果呢？虽然名字一样，但是怎么让他颜色不一样，大小不一样呢？都是面板，怎么稍微改一下代码就可以实现，一个是通栏的一个是两栏的
 js：通用的业务使用common.js 、 辅助的工具方法until.js等
 
 ### 自适应方案设计
 例如图标：30乘30，设备大了之后是35乘35
 不是在开发时人工手动去写，而是放在上线后的代码中自动去变。自动变的工作是放在构建工具中去做
+设计只会出1份设计稿，各个设备的适配是工程师的事
 
 ### 代码维护及复用性设计的思考
 项目的横向扩展能力、交互的耦合，解耦的过程。
