--- a/面试准备/项目陈述.md
+++ b/面试准备/项目陈述.md
@@ -1,15 +1,55 @@
 ###Welcome to use MarkDown
 最难的是外卖类项目，组件化最好的是金融类项目
 为什么使用vue：
-数据驱动、轻量、简洁、高效、组件化
+数据驱动、轻量、简洁、高效、组件化、文档全面
 
-### 京东金融
+## 京东金融
 MVVM框架在各个业务线盛行，以及w3c规定了webComponents标准，未来几年组件化技术势在必行。
-但是现在存在的问题是：组件化缺乏方法论
+但是现在存在的问题是：组件化缺乏方法论,虽然大家都用vue react去开发业务，但是如何定义一个组件缺乏严格的定义，这个是没有官方文档去定义说明说明情况下需要定义什么样的组件，
+就是因为没有方法论导致组件设计不合理，带来的问题有： 
+1、组件划分的过细，组件和数量相当庞大，当项目的复杂度上去以后，整个项目的规模难以把控
+2、组件划分的太粗，项目的抽象设计以及复用性设计达不到理想的效果
+组件化合理的去设计是一个重要也必须值得探讨的话题。不管是前端还是其他行业的编程，经历过软件工程的编程思想，到现在组件化技术的进化，
+目的就是让开发的敏捷度更高，开发效率更高以及复用性设计，开发的组合能力更强，给整个团队带来更大的战斗力，如果设计的不合理，战斗力体现的不是最佳境界
+* 组件化的思维方式及项目设计，项目设计比项目本身更重要
+* 组件化和模块化不仅仅是js也包括css
+* 如何将项目做出亮点，面试又该如何表现
+* 学会独立构建一个项目，做到独当一面，想成为一个合格的高级工程师，想在团队中成为核心成员   
+> 业务开发流程：
+> 技术选型分析：
+拿到一个项目，接到一个需求，我们要解决什么问题？要采用什么样的技术方案？方案背后如何去实现？我们要达到的性能指标是什么？后期的维护与迭代怎么去做？
+> 工程构建安装：
+> 项目设计及原理分析：
 
+> 项目开发阶段：
+首页开发 理财开发 白条开发 众筹开发 专题页开发对电商而言活动专题是必不可少的内容
 
+项目收获：
+掌握css模块化技术 css module 以及模块化设计
+在一个复杂的项目中把组件化设计的灵活才重要，千篇一律不如独具一格
+不仅是项目本身，还了解vue的相关用法，不追求大而全的概念而是务实，用最简单的技术去解决更复杂的问题，这个项目才会有更好的性能
+前段项目的自动化构建，独立而灵活，成长才能更快速起来，如果一味的依赖第三方的脚手架，将来面临一个较复杂的项目就会觉得自动化构建好难呀。
 
-### 饿了么
+前端基础知识：js、css、es6、git、node
+MVVM框架：vue、react、angular
+希望在业务开发提升技术实力、面试中表现优异
+兼容并包的学习心态
+
+#### 3-1 技术选型
+> 业务开发流程：技术选型、业务开发、测试验证、发布上线
+* 技术选型：在确立了一个项目会碰一个需求会议，会议告诉产品要做什么功能，要做什么类别以及做到什么程度，还有后续可能要做的依赖产品，这里直接涉及到技术选型
+* 业务开发：处理业务逻辑
+* 测试验证：需求验证，看开发的内容是不是符合产品的预期，同时要求做测试，交互逻辑是否符合交互说明，以及产品有没有bug
+* 发布上线：部署上线 小流量及单机房到全量的上线过程
+
+> 技术选型分为：构建工具、MVVM框架选择、模块化设计、自适应方案设计、代码维护及复用性设计的思考
+* 构建工具：使用vue或react，开发用es6，css使用sass或less等，但是这些是浏览器不支持的，需要去转化一下，构建工具转化成浏览器支持的
+* MVVM框架选择：团队是怎么规则和原则去选择的
+* 模块化设计：你做了什么模块化设计？模块化设计在你的项目中所取得的角色是什么？你又做了哪些优化的工作？
+* 自适应方案设计：移动端 苹果 安卓，怎么设计采用什么样的方案，能用一份代码，能在各个设备上你的项目能跑的很完美
+* 代码维护及复用性设计的思考：一个漂亮的项目不在于说这个项目的难度有多大，说用到什么什么算法，js交互有多复杂。项目的亮点是代码的维护和复用性设计，比如产品新增加一个功能，你能用20分钟搞定他吗？如果说产品要改一些交互逻辑，你能在很短时间内快速完成吗？线上发现了bug，你能快速定位吗？定位后能快速修复吗？
+
+## 饿了么
 外卖类项目webapp：商家模块 遇到的技术点（需求分析、脚手架工具、数据mock、架构设计、代码编写、自测、编译打包）
 代码规范：架构设计、组件抽象、模块拆分、代码风格统一、js变量命名规范、css代码规范
 项目：商家页面顶部，中间导航栏，下方是商家头图和一些基本信息。点击页面顶部的公告会弹出一个浮层，展示更详细的内容。
@@ -36,3 +76,18 @@ tips:1、通过ref="element",this.$refs.element 来获取原生DOM 2、在操作
 这里都是根据selectFoods的数量来进行计算，控制显示数据和样式。这也是vue数据驱动的好处。
 
 totalCount大于0，这个点开收起的状态才有效。需要有一个变量去存储他当前是收起还是展开状态。这里用fold: true。控制它显示隐藏的listShow用computed去计算。
+
+
+### 科技官网
+整屏滚动 哈希
+欢迎页动画：
+$(".welcome_animate").each(function(index,element){
+  var $this = $(this);
+  setTimeout(function(){
+    $this.show().addClass("animated fadeInUp");
+  },200*(index+1))
+});
+当启动动画还在执行的时候，向下滚动不成功
+onselectstart="return false" 用于不能选中文字
+列表页 使用事件委托 
+正则获取xxx.html?type=content&conId=1
