错误监控，mvvm框架

--- a/面试准备/面试准备.md
+++ b/面试准备/面试准备.md
@@ -401,13 +401,123 @@ CSRF
 预防措施
 
 ## 3-16 算法类
+思否
 
 ## 4-1 渲染机制
+
 ## 4-2 js运行机制
+js单线程
+
 ## 4-3 页面性能
+提升页面性能的方法？
+1、资源压缩合并，减少HTTP请求  开启gzip压缩
+2、非核心代码异步加载 - 异步加载的方式 - 异步加载的区别
+* 动态脚本加载
+* defer
+* async
+* 区别：
+  defer在HTML解析完之后才会执行。如何多个，按照加载的顺序依次执行
+  async在加载完之后立即执行，如果如何多个，执行顺序和加载的顺序无关
+3、利用浏览器缓存 - 缓存分类 - 缓存的原理
+* 强缓存
+    缓存到本地，相当于在本地存储了一个副本，放在电脑磁盘
+    http头信息：Expires(服务端的绝对时间和本地时间会有偏差) Cache-Control(相对时间，在这个时间之内不会向服务器请求.如果两个都有以此为准)
+    问都不问，直接拿过来用
+* 协商缓存
+    浏览器发现我的本地有这个副本，但是我不确定用不用他，向服务器询问，这个文件要不要用
+  Last-Modified - 时间变了，但是内容没有变化怎么办？就使用Etag
+  Last-Modified-Since
+  Etag：hash值  对比hash值 查看内容是否变了
+  If-None-Match
+  
+4、使用CDN:加载资源非常快，网络优化    尤其是第一次打开的时候，浏览器缓存是起不到任何作用的。
+5、预解析DNS
+`<meta http-equiv="x-dns-prefetch-control" content="on"/><link rel="dns-prefetch" href="//host_name_to_prefetch.com"/>
+`
+link这个标签：DNS预解析
+a标签在高级浏览器中是默认打开了DNS预解析的，不用加link这句，也是可以做到的。但是协议是https的，很多浏览器是默认关闭预解析的。
+meta这个标签是强制打开DNS预解析
 ## 4-4 错误监控
+* 问：如何检测js错误？
+* 如何保证你的产品质量
+* 前端错误的分类
+        即使运行错误：代码错误
+        资源加载错误
+* 错误的捕获方式
+      即使运行错误：1、try...catch  2、window.onerror(不能用在资源加载错误，因为他不会冒泡)
+      资源加载错误： 1、object.onerror(obj是DOM 节点) 2、performance.getEntries()返回数组。可以获取到所有已加载资源的资源时长 ,可以间接的获取未加载的资源 3、Error事件捕获
+    延伸：跨域的js运行错误可以捕获吗，错误提示什么，应该怎么处理？
+  1、在script标签增加crossorigin属性
+  2、设置js资源响应头Access-Control-Allow-Origin:*或者写专门的域名
+* 上报错误的分类
+  1、采用Ajax通信上报（可以上报，但是都不采用）
+  2、利用Image对象上报 (new Image()).src = 'http://baidu.com/hdudid?w=22'
+  
 ## 4-5 mvvm框架 双向绑定
+* 了解MVVM框架吗？ 
+ vue react angular
+ 1. 一定要想好说那个
+ 2. 收住优点，攒着下面说，开启引导模式 （说：我用过vue；我对vue有深入研究。到此打住）
+ 3. 话别说的太满，低调谨慎
+* 谈谈你对MVVM的认识？
+   聊聊MVC，彰显知识面涉猎较多
+   把MVVM的定义说清楚，表达概念理解到位
+   对比mvvm和mvc（自己对比）
+   view(页面，展现形态) -- viewmodel(核心枢纽，data映射到view，和model是ajax通信) -- model(服务器上某一块业务逻辑操作)
+* 双向绑定是什么原理，可以写出来吗？
+    绑定：自动化处理 不需要手动
+    双向： view -反向> data
+        <正向-
+   
+    例如：数据 a=1 修改了a=2，以前的开发，需要拿到DOM节点，再将数据渲染进去。
+> mvvm：es5API Object.defineProperty
+> 这个API可以监听到data的变化，监听到变化以后有一个回调函数，在定义的时候直接写好回调函数，
+> 后续就不需要关心了，在回调函数中写明view和data中某一项数据的关联关系,之后只需要修改data，后续不需要关心
+> 反向view->data:input事件，只是不需要我们自己去写了，是框架背后帮你做了这件事
+> Object.defineProperty()方法会直接在一个对象上定义一个新属性，或者修改一个对象的现有属性，并返回这个对象
+> Object.defineProperty(obj, prop, descriptor) obj要在其上定义属性的对象。 prop要定义或修改的属性的名称。 descriptor 将被定义或修改的属性描述符
+> 属性描述符:configurable 可读可修改 ； enumerable枚举，可以使用for...of let..in iterater 取值：get 修改：set
+> 在mvvm中 修改data的时候就是触发了set，set检查新的值和旧的值是不是一样，如果不一样就触发这个回调,就是完成了一次赋值检测,也就是说你改变了
+> Object.defineProperty用法要熟记于心
+> Object.defineProperty(es5返回新对象)与reflect.defineProperty(es6返回布尔值)的区别
+> Object.defineProperty要会手写
+* 使用了什么设计模式？
+* 生命周期是什么？
+* 有看过源码吗？（3-4年了）你觉得这个框架的特色是什么？自己收获最大的是什么？
+
+
+
 ## 4-6 mvvm框架 设计模式
+把Object.defineProperty用法熟悉之后再听剩下的课程！！！！！！！！
+-----------
+观察者模式
+监听者：Observer(Object.defineProperty) 监听data发生的变化，变化后会通知所有的观察者列表Dep
+观察者列表Dep：data中有个a=1，有好多观察者，说a的变化你要告诉我，我要做处理.数据的变化会触发Object.defineProperty下的set函数，set会对观察者列表的触发。列表中会有一个更新函数，通知了他们他们会自动的调update函数也就是Dep要调回调，这个回调是观察者watcher给的。
+观察者watcher：数据变化了以后你要更新，更新什么内容是watcher所定义的。watcher就去更新view。Dep的update是怎么传进去的，就是watcher的订阅
+Observer只负责监听这个东西，他怎么知道有谁是观察者列表呢，其实是watcher添加的。他是维护一个列表，列表中有谁他不知道，谁去添加呢就是watcher
+data改变了触发set函数，就将Dep循环一遍，通知一遍。每一个列表中调用update
+
+观察者设计模式的原理要了如指掌
+最好能写出设计模式的伪代码
+如果没有问到设计模式，但是你要展示你的优势
+
 ## 4-7 mvvm框架 生命周期
+一个对象什么时候可以做什么样的事
+vue2.0支持虚拟DOM
+new Vue（）
+init 初始化 编译
+beforeCreate
+init
+created
+beforeMount
+mounted（想操作DOM对象的话，做监控通常放在这，页面渲染已经完成）
+beforeUpdate （虚拟DOM重新渲染和patch对比的过程叫defer，在对比前触发）
+updated（对比完了，页面重新渲染了。测一个点的性能，这里更合适）
+beforeDestroy
+destroyed
+熟记对应的几个节点
+熟记每个节点触发的时机
+最好多演练一下，写写demo
+
 ## 4-8 mvvm框架 源码分析
 
