--- a/面试准备/2018.3.12面试.md
+++ b/面试准备/2018.3.12面试.md
@@ -14,7 +14,8 @@
 * vue的饿了么那套UI使用过吗？
 * canvas在你的项目中用过吗？
 * 说一下，web socket，在你的项目中使用了吗？(我说了SSE和这个比较类似，服务端推送)
-* 长连接了解吗？(不知道，自己说持久连接 管线化)
+* 长连接了解吗？(不知道，自己说持久连接 管线化。tcp链接后不断开，考虑性能问题)
+* nginx配置过吗？
 
 ##### 基础类的：
 * js闭包是什么？(说的时候可以自己延伸，说说优缺点)
